# studie-notes

./: .gitignore  README.md  asset-manifest.json  index.html
backend/: Cargo.toml
backend/src/: main.rs  mongo.rs
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.scss  App.tsx  Colors.scss  index.tsx  serverURL.ts
frontend/src/app/: loginSlice.ts  store.ts
frontend/src/components/ClassPage/: ClassPage.module.scss  ClassPage.tsx  classPageAPI.ts  classPageSlice.ts
frontend/src/components/LoginPage/: LoginPage.module.scss  LoginPage.tsx  loginPageAPI.ts
frontend/src/components/NotesPage/: NotesPage.module.scss  NotesPage.tsx  notesPageAPI.ts  notesPageSlice.ts
frontend/src/components/UserPage/: UserPage.module.scss  UserPage.tsx
static/css/: main.5795c006.css  main.5795c006.css.map
static/js/: main.242d824c.js  main.242d824c.js.map  main.249ab55d.js  main.249ab55d.js.map  main.5673dda4.js  main.5673dda4.js.map  main.5eac53ed.js  main.5eac53ed.js.map  main.6b46da47.js  main.6b46da47.js.map  main.ad07315e.js  main.ad07315e.js.map
