[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
mongodb = "2.3.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = "1.0.144"
serde_json = "1.0"
